小程序蜜汁BUG补充

--- a/docs/010.大前端/020.小程序/01.蜜汁bug汇总.md
+++ b/docs/010.大前端/020.小程序/01.蜜汁bug汇总.md
@@ -20,10 +20,10 @@ editLink: false # 不显示编辑按钮
 `scroll-view` 在设置`scroll-x="{{ true }}"` ，类样式在用`display=flex`时, `scroll-view`的子元素会出现宽度压缩现象，同时横向滚动失效
 :::
 
-**解决方法**
+#### 解决方法
 
-给scroll-view设置white-space: nowrap;
-给子元素设置display: inline-block;
+给`scroll-view`设置`white-space: nowrap;`
+给子元素设置`display: inline-block;`
 
 <code-group>
   <code-block title="WXML" active>
@@ -65,10 +65,31 @@ editLink: false # 不显示编辑按钮
 </code-group>
 
 
+
+
+
 ::: center
   ## IOS与Android 底部状态栏高度不一致问题
 :::
+
 ::: warning 问题描述
-IOS与Android屏幕底部的计算方式不一致导致小程序在编译到真机上时IOS与Android高度明显不一致，无法还原设计图和多端一UI致性
+IOS与Android屏幕底部的计算方式不一致导致小程序在编译到真机上时IOS与Android高度明显不一致，无法还原设计图和多端一UI致性，问题如下图
+![高度对比](../img/001.jpg "高度对比")
 :::
-写累了，明天再写吧...
+
+#### 问题分析
+
+造成高度不一致的主要原因是因为UI在给图片设计时以IOS为准，会为底部预留34pt的缓冲区，所以上图中右侧IOS的的高度是还原设计图的，而Android手机底部在系统层面上已经为开发者预留了缓冲区（至少小米是的），如果按照设计图的高度去写，则渲染到Android手机的实际高度是别设计图高了68rpx(1pt = 1px = 2rpx)，所以上图中左侧底部状态栏高度是高于右侧。
+发现了问题所在，那么解决方法那就很简单了，我们只需要判断当前机器是否为Android即可（反之IOS亦然，Harmony OS识别返回结果是Android，等待官方后续优化吧）
+#### 解决方法
+
+```
+  wx.getSystemInfo({
+    success: function (res) {
+      that.data.platform = res.platform  //获取当前机器的系统环境platform在视图层渲染之前已经得到结果，所以不需要使用setData方法
+    }
+  })
+----------------------------------------------------------------------------------------------------
+视图层通过三元表达式动态赋值高度即可
+style="height: {{platform == 'android' ?'124rpx': '166rpx'}};
+```
