关于我，内容补充

--- a/docs/090.关于/01.关于我.md
+++ b/docs/090.关于/01.关于我.md
@@ -5,10 +5,85 @@ permalink: /pages/b17a2e/
 categories:
   - 关于
 tags:
-  - 
+  - 关于
+sidebar: false # 侧边栏
+article: true # 文章页 (不显示面包屑栏、最近更新栏等)
+comment: true # 评论栏
+editLink: false # 编辑按钮
 ---
+## :cat: 蛋蛋
+<div class="cat-container">
+  <img class="my-cat" src="/assets/img/dandan02.jpg" alt="蛋蛋"></img>
+  <img class="my-cat" src="/assets/img/dandan01.jpg" alt="蛋蛋"></img>
+</div>
 
 
-::: warning 问题描述
-还没想好怎么写...
+
+## 👩‍💻关于我
+前端小小萌新,没啥特别得兴趣爱好,喜欢瞎折腾,大学时误入歧途自学了前端开发，但依然对网络安全心心念的菜狗
+### 技能
+- 熟悉 JavaScript、HTML、CSS、Vue的拼写
+- 知道小程序的怎么用
+- 精通 Git 的 pull 和 push
+- 擅长并注重 C V 的使用
+
+## 📚关于Blog
+做这个博客的初衷是为了知识沉淀和个人总结，前端技术更新迭代很快，但万变不离其宗，实时沉淀方能以不变应万变。文章内容是个人在工作和学习中的小总结，本人资历尚浅，做事毛糙，文中有误的地方还请指正
+
+### Blog Theme
+
+ ::: cardList 2
+```yaml
+- name: Vdoing
+  desc: 🚀一款简洁高效的VuePress 知识管理&博客(blog) 主题
+  link: https://github.com/xugaoyi/vuepress-theme-vdoing
+  bgColor: '#DFEEE7'
+  textColor: '#2A3344'
+```
 :::
+
+
+## :email:  联系我
+
+- QQ: <a :href="qqUrl" class='qq'>{{ QQ }}</a>
+- WeChat: qwedf5350
+- Email: <a href="mailto:535027650@qq.com">535027650@qq.com</a>
+- Github: <https://github.com/dafei5350>
+
+
+<script>
+  export default {
+    data(){
+      return {
+        QQ: '535027650',
+        qqUrl: `tencent://message/?uin=${this.QQ}&Site=&Menu=yes`
+      }
+    },
+    mounted(){
+      const flag =  navigator.userAgent.match(/(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i);
+      if(flag){
+        this.qqUrl = `mqqwpa://im/chat?chat_type=wpa&uin=${this.QQ}&version=1&src_type=web&web_src=oicqzone.com`
+      }
+    }
+  }
+</script>
+<style>
+.cat-container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.my-cat {
+  width: 50%;
+  height: 580px;
+  border-radius: 10px;
+}
+.my-cat:first-child {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.my-cat:last-child{
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+</style>
