--- a/docs/090.关于/01.关于我.md
+++ b/docs/090.关于/01.关于我.md
@@ -28,7 +28,7 @@ editLink: false # 编辑按钮
 - 擅长并注重 C V 的使用
 
 ## 📚关于Blog
-做这个博客的初衷是为了知识沉淀和个人总结，前端技术更新迭代很快，但万变不离其宗，实时沉淀方能以不变应万变。文章内容是个人在工作和学习中的小总结，本人资历尚浅，做事毛糙，文中有误的地方还请指正
+做这个博客的初衷是为了知识沉淀和个人总结，前端技术更新迭代很快，但万变不离其宗，实时沉淀方能以不变应万变。文章内容是个人在工作和学习中的小总结，本人资历尚浅，文笔粗糙，文中有误的地方还请指正
 
 ### Blog Theme
 
@@ -71,19 +71,18 @@ editLink: false # 编辑按钮
 .cat-container{
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .my-cat {
-  width: 50%;
-  height: 580px;
+  width: 350px;
+  height: 500px;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+  margin-top: 10px;
 }
-.my-cat:first-child {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+.my-cat:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
 }
-.my-cat:last-child{
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
+
 </style>
