--- a/docs/010.大前端/030.CSS/03.Flex..md
+++ b/docs/010.大前端/030.CSS/03.Flex..md
@@ -6,8 +6,8 @@ categories:
   - 大前端
   - CSS
 tags:
-  - 
-editLink: false 
+  - Flex
+editLink: false
 ---
 
 > [现代浏览器对`Flex`的兼容性 ](https://caniuse.com/?search=flex)
