--- a/docs/010.大前端/030.CSS/04.Grid.md
+++ b/docs/010.大前端/030.CSS/04.Grid.md
@@ -10,8 +10,341 @@ tags:
 editLink: false
 ---
 
+> `grid`（网格布局）是一种新的布局模型，迄今为止css最强大的布局方案，也是唯一的二维布局方案。
+
+
+## `Grid`与`flex`的区别
+
+**`flex`布局是一纬布局，`Grid`布局是二维布局**；这就是两者之间的实质性区别，`flex`项目将容器划分成 一行 **或** 一列，在单一纬度上对容器中的子元素进行布局；`Grid`项目是将容器划分成了 行 **和** 列，产生一个个网格元素，从而达到布局的目的。`Grid`布局远比 `flex` 布局强大！
+
+flex布局示例
+![flex布局示例](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/flex-exp.1bw4cultwg74.webp)
+Grid布局示例
+![Grid布局示例](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/grid-exp.37ms1lvs00m0.webp)
 ## 基本概念
-采用网格布局的区域，称为"容器"（container）。容器内部采用网格定位的子元素，称为"项目"（item）。
+Grid 布局属性可以分为两大类，一类是容器属性，一类是项目属性。
 ![基本概念](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/grid.6w7burvx85s0.webp)
-![Grid-line](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/grid-line.2cbuwlp3yda8.webp)
+### 容器 `container`
+采用网格布局的区域，称为"容器"（container）。容器内部采用网格定位的子元素，称为"项目"（item）。
+**示例效果**
+::: demo Grid布局演示
+```vue
+
+<template>
+  <div class="box">
+    <div class="one item">One</div>
+    <div class="two item">Two</div>
+    <div class="three item">Three</div>
+    <div class="four item">Four</div>
+    <div class="five item">Five</div>
+    <div class="six item">Six</div>
+  </div>
+</template>
+<style>
+.box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  grid-auto-rows: minmax(100px, auto);
+}
+.one {
+  grid-column: 1 / 2;
+  grid-row: 1;
+  background: #19CAAD;
+}
+.two {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+  background: #8CC7B5;
+}
+.three {
+  grid-row: 2 / 5;
+  grid-column: 1;
+  background: #D1BA74;
+}
+.four {
+  grid-column: 3;
+  grid-row: 3;
+  background: #BEE7E9;
+}
+.five {
+  grid-column: 2;
+  grid-row: 3/5;
+  background: #E6CEAC;
+}
+.six {
+  grid-column: 3;
+  grid-row: 4;
+  background: #ECAD9E;
+}
+.item {
+  text-align: center;
+  font-size: 200%;
+  color: #fff;
+}
+</style>
+```
+:::
+
+### 行 与 列 `row` `column`
+容器里面的水平区域称为"行"（row），垂直区域称为"列"（column）。
 ![Grid-row-col](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/row-col.6zxmtxdr1ts0.webp)
+
+### 单元格 `cell`
+行和列的交叉区域，称为"单元格"（cell）。
+单元格产生的数量计算方法：row × col。例如下图：5行3列会产生15个单元格（5 × 3 = 15）。
+![Grid-row-col](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/row-col.6zxmtxdr1ts0.webp)
+
+### 网格线
+划分网格的线，称为"网格线"（grid line）。水平网格线划分出行，垂直网格线划分出列。
+网格线的计算方法，n行有n + 1根水平网格线，m列有m + 1根垂直网格线，例如下图，是一个 4 x 4 的网格，共有5根水平网格线和5根垂直网格线。
+![Grid-line](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/grid-line.2cbuwlp3yda8.webp)
+
+## 使用方法
+**块级元素**
+```css
+.box {
+  display: grid;
+}
+```
+**行内元素**
+```css
+.box {
+  display: inline-grid;
+}
+```
+**注意，设为网格布局以后，容器子元素（项目）的`float`、`display: inline-block`、`display: table-cell`、`vertical-align`和`column-*`等设置都将失效。**
+
+### grid-template-[rows | columns] 
+
+`grid-template-columns`属性定义每一列的列宽
+`grid-template-rows`属性定义每一行的行高。
+注意：属性值单位可以混用，如下图
+::: demo grid-template-*演示
+```vue
+<template>
+  <div class="box">
+    <template v-for="(item, index) in 9">
+      <div class="row-col">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.box {
+  display: grid;
+  grid-template-columns: 33% 100px 10em; 
+  grid-template-rows: 100px 100px 100px;
+}
+
+.row-col {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+
+#### repeat()
+当网格元素很多时，可以通过`repeat()`函数简化参数值，
+
+::: demo repeat()演示
+```vue
+<template>
+  <h2>repeat(num, val)函数接受两个参数，一个是重复的次数，一个是重复的值</h2>
+  <div class="repeat-box">
+    
+    <template v-for="(item, index) in 9">
+      <div class="repeat-item">{{item}}</div>
+    </template>
+  </div>
+  <h2>repeat(num, val)函数也可以重复某种模式</h2>
+  <div class="repeat-box2">
+    <template v-for="(item, index) in 12">
+      <div class="repeat-item">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.repeat-box {
+  display: grid;
+  grid-template-columns: repeat(3, 30%); 
+  grid-template-rows: repeat(3, 100px);
+}
+.repeat-box2 {
+  display: grid;
+  grid-template-columns: repeat(2, 60px 120px 180px);
+  grid-template-rows: repeat(2, 100px);
+}
+
+.repeat-item {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+#### auto-fill
+有时，单元格的大小是固定的，但是容器的大小不确定。如果希望每一行（或每一列）容纳尽可能多的单元格，这时可以使用auto-fill关键字表示自动填充。
+![auto-fill](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/auto-fill.3i7jeyn5ku40.gif)
+::: demo auto-fill演示
+```vue
+<template>
+  <div class="auto-fill">
+    <template v-for="(item, index) in 9">
+      <div class="row-col">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.auto-fill {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 100px); 
+  grid-template-rows: 100px 100px;
+}
+
+.row-col {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+#### fr
+为了方便表示比例关系，网格布局提供了fr关键字（fraction 的缩写，意为"片段"）。如果两列的宽度分别为1fr和2fr，就表示后者是前者的两倍。
+注意：fr可以和 其他长度单位混用，如下演示代码，第一列宽度为100px，第二列为第三列宽度的一半
+![fr](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/fr.37pmua1rt9w0.gif)
+::: demo fr演示
+```vue
+<template>
+  <div class="fr">
+    <template v-for="(item, index) in 9">
+      <div class="row-col">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.fr {
+  display: grid;
+  grid-template-columns: 100px 1fr 2fr; 
+  grid-template-rows: 100px 100px;
+}
+
+.row-col {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+#### minmax()
+minmax()函数产生一个长度范围，表示长度就在这个范围之中。它接受两个参数，分别为最小值和最大值。
+![minmax](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/minmax.huaoxeomlj4.gif)
+```css
+.box {
+  grid-template-columns: 1fr 1fr minmax(100px, 1fr)
+}
+```
+
+#### auto
+auto关键字表示由浏览器自己决定长度，即动态分配长度。
+![auto](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/auto.1c6gjtyb3fy8.gif)
+```css
+.box {
+  grid-template-columns: 100px auto 100px; //此时auto的宽度为最大长度减去两个100px，可以理解为可分配的最大宽度
+}
+```
+
+#### 网格线的名称
+`grid-template-columns`属性和`grid-template-rows`属性里面，还可以使用方括号，指定每一根网格线的名字，方便以后的引用。
+注意：网格布局允许同一根线有多个名字，比如`[fifth-line row-5]`。
+```css
+
+.box {
+  display: grid;
+  grid-template-columns: [c1] 100px [c2] 100px [c3] auto [c4];
+  grid-template-rows: [r1] 100px [r2] 100px [r3] auto [r4];
+}
+
+```
+
+### [row | column]-gap (gap)
+::: warning 根据最新标准，该属性名变更，你依然可以使用旧的属性名，不过建议使用更名后的属性名
+`grid-column-gap`改为`column-gap`
+`grid-row-gap`改为`row-gap`
+`grid-gap`改为`gap`。
+:::
+`row-gap`属性设置行与行的间隔（行间距）
+`column-gap`属性设置列与列的间隔（列间距）
+::: demo [row | colnum]-gap属性使用示例；行间距20px，列间距10px
+```vue
+<template>
+  <div class="grid-gap">
+    <template v-for="(item, index) in 9">
+      <div class="row-col">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.grid-gap {
+  display: grid;
+  grid-template-columns:  repeat(3, 1fr); 
+  grid-template-rows: 100px 100px 100px;
+  column-gap: 10px;
+  row-gap: 20px;
+  /* gap: 10px 20px; */
+}
+
+.row-col {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+`gap`属性是`row-gap`和`colnmu-gap`的简写形式，语法如下
+```css
+.box {
+  gap: <row-gap> | <column-gap>;
+}
+```
+因此上面的代码也可以这么写
+**注意：如果gap只有一个值，那么默认第二个值等于第一个值**
+```css
+  gap: 10px 20px;
+```
+
+
+## 参考链接
+- [CSS Grid 网格布局教程](https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html)
+- [A Complete Guide to Grid](https://css-tricks.com/snippets/css/complete-guide-grid/)
+- [Learn CSS Grid](https://learncssgrid.com/)
