--- a/docs/010.大前端/030.CSS/04.Grid.md
+++ b/docs/010.大前端/030.CSS/04.Grid.md
@@ -291,7 +291,7 @@ auto关键字表示由浏览器自己决定长度，即动态分配长度。
 
 ```
 
-### [row | column]-gap (gap)
+### [row | column]-gap 与 gap
 ::: warning 根据最新标准，该属性名变更，你依然可以使用旧的属性名，不过建议使用更名后的属性名
 `grid-column-gap`改为`column-gap`
 `grid-row-gap`改为`row-gap`
@@ -342,7 +342,273 @@ auto关键字表示由浏览器自己决定长度，即动态分配长度。
 ```css
   gap: 10px 20px;
 ```
+### grid-template-areas
+`grid-template-areas`属性用于定义区域，一个区域由单个或多个单元格组成。
+一般该属性跟网格元素的`grid-area`项目属性一起使用，`grid-area`属性用于指定项目存放区域
+如果某些区域不需要利用，则使用"点"（.）表示，那么该单元格不属于任何区域
+::: demo `grid-template-areas`属性使用示例
+```vue
+<template>
+  <div class="template-areas">
+    <div class="row-col left-nav">left-nav</div>
+    <div class="row-col center-nav">center-nav</div>
+    <div class="row-col right-nav">right-nav</div>
+    <div class="row-col left-main">left-main</div>
+    <div class="row-col right-main">right-main</div>
+    <div class="row-col right-footer">right-footer</div>
+  </div>
+</template>
+<style>
+.template-areas {
+  display: grid;
+  grid-template-columns:  repeat(3, 33%);
+  grid-template-rows: 100px 100px 100px;
+  column-gap: 10px;
+  row-gap: 20px;
+  grid-template-areas:  'left-nav center-nav right-nav'
+                      'left-main . right-main'
+                      '. . right-footer';
+}
 
+.row-col {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.left-nav {
+  grid-area: left-nav;
+}
+.center-nav {
+  grid-area: center-nav;
+}
+.right-nav {
+  grid-area: right-nav;
+}
+.left-main {
+  grid-area: left-main;
+}
+.right-main {
+  grid-area: right-main;
+}
+.right-footer {
+  grid-area: right-footer;
+}
+</style>
+```
+:::
+
+::: warning 注意，
+区域的命名会影响到网格线。每个区域的起始网格线，会自动命名为`区域名-start`，终止网格线自动命名为`区域名-end`。
+比如，区域名为`header`，则起始位置的水平网格线和垂直网格线叫做`header-start`，终止位置的水平网格线和垂直网格线叫做`header-end`。
+:::
+
+###  grid-auto-flow
+`grid`的项目的子元素默认会按照从左至右、从上至下的顺序自动放置在每一个网格，上文中多个代码演示项目均是按照此默认顺序
+`grid-auto-flow`属性可以改变子元素的排列顺序，属性值如下
+- `row` 多的格子一行一行陈列。默认值。
+- `column` 多的格子一列一列排列。
+- `dense` 多的格子空白填充。
+```css
+.box {
+  grid-auto-flow: [row | column] || dense ;
+}
+```
+::: demo [row | colnum]-gap属性使用示例；行间距20px，列间距10px
+```vue
+<template>
+  <div class="grid-gap">
+    <template v-for="(item, index) in 9">
+      <div class="row-col">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.grid-gap {
+  display: grid;
+  grid-template-columns:  repeat(3, 1fr); 
+  grid-template-rows: 100px 100px 100px;
+  gap: 10px 20px;
+  grid-auto-flow: column dense;
+}
+
+.row-col {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+### justify-content\align-content\place-content 
+`justify-content`属性是整个内容区域在容器里面的水平位置（左中右）
+`align-content`属性是整个内容区域的垂直位置（上中下）
+`place-content`属性是`align-content`属性和`justify-content`属性的合并简写形式。
+
+```css
+.box {
+  justify-content: start | end | center | stretch | space-around | space-between | space-evenly;
+  align-content: start | end | center | stretch | space-around | space-between | space-evenly;  
+}
+```
+::: demo 
+```vue
+<template>
+  <h2>start - 对齐容器的起始边框。</h2>
+  <div class="justify-start">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-justify">{{item}}</div>
+    </template>
+  </div>
+
+  <h2>center - 容器内部居中。</h2>
+  <div class="justify-center">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-justify">{{item}}</div>
+    </template>
+  </div>
+  <h2>end -  对齐容器的结束边框。</h2>
+  <div class="justify-end">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-justify">{{item}}</div>
+    </template>
+  </div>
+  <h2>space-around - 每个项目两侧的间隔相等。所以，项目之间的间隔比项目与容器边框的间隔大一倍。</h2>
+  <div class="justify-space-around">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-justify">{{item}}</div>
+    </template>
+  </div>  
+  <h2>space-between - 项目与项目的间隔相等，项目与容器边框之间没有间隔。</h2>
+  <div class="justify-space-between">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-justify">{{item}}</div>
+    </template>
+  </div>
+  <h2>space-evenly - 项目与项目的间隔相等，项目与容器边框之间也是同样长度的间隔。</h2>
+  <div class="justify-space-evenly">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-justify">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.justify-start {
+  padding: 5px;
+  border: 2px solid #1abc9c;
+  display: grid;
+  justify-content: start;
+  grid-template-columns:  repeat(3, 75px); 
+  grid-template-rows: repeat(3, 75px);
+  gap: 10px 20px; 
+}
+.justify-center {
+  padding: 5px;
+  border: 2px solid #1abc9c;
+  display: grid;
+  justify-content: center;
+  grid-template-columns:  repeat(3, 75px);
+  grid-template-rows: repeat(3, 75px);
+  gap: 10px 20px;
+}
+.justify-end {
+  padding: 5px;
+  border: 2px solid #1abc9c;
+  display: grid;
+  justify-content: end;
+  grid-template-columns:  repeat(3, 75px);
+  grid-template-rows: repeat(3, 75px);
+  gap: 10px 20px;
+}
+.justify-space-around{
+  padding: 5px;
+  border: 2px solid #1abc9c;
+  display: grid;
+  justify-content: space-around;
+  grid-template-columns:  repeat(3, 75px);
+  grid-template-rows: repeat(3, 75px);
+  gap: 10px 20px;
+}
+.justify-space-between{
+  padding: 5px;
+  border: 2px solid #1abc9c;
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns:  repeat(3, 75px);
+  grid-template-rows: repeat(3, 75px);
+  gap: 10px 20px;
+}
+.justify-space-evenly{
+  padding: 5px;
+  border: 2px solid #1abc9c;
+  display: grid;
+  justify-content: space-evenly;
+  grid-template-columns:  repeat(3, 75px);
+  grid-template-rows: repeat(3, 75px);
+  gap: 10px 20px;
+}
+.row-col-justify {
+  border-radius: 5px;
+  background: #1abc9c;
+  color: white;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+
+
+### grid-auto-columns/grid-auto-rows
+`grid-auto-columns`属性和`grid-auto-rows`属性用来设置，浏览器自动创建的多余网格的列宽和行高。
+它们的写法与`grid-template-columns`和`grid-template-rows`完全相同。如果不指定这两个属性，浏览器完全根据单元格内容的大小，决定新增网格的列宽和行高。
+
+::: demo grid-auto-columns/grid-auto-rows属性使用示例 第四行和第五行高度由原先的100px变为50px
+```vue
+<template>
+  <div class="grid-auto">
+    <template v-for="(item, index) in 13">
+      <div class="row-col">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.grid-auto {
+  display: grid;
+  grid-template-columns:  repeat(3, 1fr); 
+  grid-template-rows: 100px 100px 100px;
+  gap: 10px 20px;
+  grid-auto-rows: 50px;
+}
+
+.row-col {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+
+### grid-template/grid
+`grid-template`属性是`grid-template-columns`、`grid-template-rows`和`grid-template-areas`这三个属性的合并简写形式。
+`grid`属性是`grid-template-rows`、`grid-template-columns`、`grid-template-areas`、 `grid-auto-rows`、`grid-auto-columns`、`grid-auto-flow`这六个属性的合并简写形式。
 
 ## 参考链接
 - [CSS Grid 网格布局教程](https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html)
