--- a/docs/010.大前端/030.CSS/04.Grid.md
+++ b/docs/010.大前端/030.CSS/04.Grid.md
@@ -610,6 +610,159 @@ auto关键字表示由浏览器自己决定长度，即动态分配长度。
 `grid-template`属性是`grid-template-columns`、`grid-template-rows`和`grid-template-areas`这三个属性的合并简写形式。
 `grid`属性是`grid-template-rows`、`grid-template-columns`、`grid-template-areas`、 `grid-auto-rows`、`grid-auto-columns`、`grid-auto-flow`这六个属性的合并简写形式。
 
+## 项目属性
+
+### grid-[column | row]-[start | end]
+项目的位置是可以指定的，具体方法就是指定项目的四个边框，分别定位在哪根网格线。
+- `grid-column-start`属性：左边框所在的垂直网格线
+- `grid-column-end`属性：右边框所在的垂直网格线
+- `grid-row-start`属性：上边框所在的水平网格线
+- `grid-row-end`属性：下边框所在的水平网格线
+
+默认情况下子元素的位置由`grid-auto-flow`属性决定，排列规则由`grid-auto-flow`的属性值决定
+除此之外，该属性还可为为网格线指定名称
+```css
+.box {
+  grid-column-start: header-start;
+  grid-column-end: header-end;
+}
+```
+这四个属性的值还可以使用`span`关键字，表示"跨越"，即左右边框（上下边框）之间跨越多少个网格。
+```css
+
+.box {
+  grid-column-start: span 2;
+}
+```
+
+::: demo grid-[column | row]-[start | end]
+```vue
+<template>
+  <div class="grid-column-start">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-start">{{item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.grid-column-start {
+  display: grid;
+  grid-template-columns:  repeat(3, 1fr); 
+  grid-template-rows: 100px 100px 100px;
+  gap: 10px 20px;
+}
+.row-col-start:first-child {
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
+.row-col-start {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
+```
+:::
+
+### grid-column grid-row
+`grid-column`属性是`grid-column-start`和`grid-column-end`的合并简写形式，`grid-row`属性是`grid-row-start`属性和`grid-row-end`的合并简写形式。
+
+```css
+.box {
+  grid-column: <start-line> / <end-line>;
+  grid-row: <start-line> / <end-line>;
+}
+------------------------------------------------------------------------
+.box {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+/* 等同于 */
+.box {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+```
+
+### grid-area
+`grid-area`属性指定项目放在哪一个区域。该属性一般和`grid-template-areas`属性一起使用，请参考上文,
+此外，`grid-area`属性还可用作`grid-row-start`、`grid-column-start`、`grid-row-end`、`grid-column-end`的合并简写形式，直接指定项目的位置。
+
+```css
+
+.box {
+  grid-area: <row-start> / <column-start> / <row-end> / <column-end>;
+}
+-----------------------------------------------------------------------------------------
+
+.box {
+  grid-area: 1 / 1 / 3 / 3;
+}
+```
+
+### [justify | align | place]-self
+- `justify-self`属性设置单元格内容的水平位置（左中右）跟`justify-items`属性的用法完全一致，但只作用于单个项目。
+- `align-self`属性设置单元格内容的垂直位置（上中下），跟`align-items`属性的用法完全一致，也是只作用于单个项目。
+- `place-self`属性是`align-self`属性和`justify-self`属性的合并简写形式。
+
+```css
+.box {
+  justify-self: start | end | center | stretch;
+  align-self: start | end | center | stretch;
+  place-self: <align-self> <justify-self>;
+}
+```
+start：对齐单元格的起始边缘。
+end：对齐单元格的结束边缘。
+center：单元格内部居中。
+stretch：拉伸，占满单元格的整个宽度（默认值）。
+
+::: demo [justify | align | place]-self
+```vue
+<template>
+  <div class="self">
+    <template v-for="(item, index) in 9">
+      <div class="row-col-self">{{item == 1?'左对齐':item == 2?'居中':item == 3?'右对齐':item}}</div>
+    </template>
+  </div>
+</template>
+<style>
+.self {
+  display: grid;
+  grid-template-columns:  repeat(3, 1fr); 
+  grid-template-rows: 100px 100px 100px;
+  gap: 10px 20px;
+}
+.row-col-self {
+  border-radius: 5px;
+  border: 2px solid #1abc9c;
+  color: #1abc9c;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.row-col-self:first-child {
+  justify-self: start;
+}
+.row-col-self:nth-child(2) {
+  justify-self: center;
+}
+.row-col-self:nth-child(3) {
+  justify-self: end;
+}
+
+</style>
+```
+:::
+
+
 ## 参考链接
 - [CSS Grid 网格布局教程](https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html)
 - [A Complete Guide to Grid](https://css-tricks.com/snippets/css/complete-guide-grid/)
