--- a/docs/090.关于/01.关于我.md
+++ b/docs/090.关于/01.关于我.md
@@ -22,7 +22,7 @@ editLink: false # 编辑按钮
 前端小小萌新,没啥特别得兴趣爱好,喜欢瞎折腾,大学时误入歧途自学了前端开发，但依然对网络安全心心念的菜狗
 ### 技能
 - 熟悉 JavaScript、HTML、CSS、Vue的拼写
-- 知道小程序的怎么用
+- 会一点小程序
 - 精通 Git 的 pull 和 push
 - 擅长并注重 C V 的使用
 
