--- a/docs/010.大前端/020.小程序/01.蜜汁bug汇总.md
+++ b/docs/010.大前端/020.小程序/01.蜜汁bug汇总.md
@@ -71,7 +71,7 @@ editLink: false # 不显示编辑按钮
 
 ::: warning 问题描述
 IOS与Android屏幕底部的计算方式不一致导致小程序在编译到真机上时IOS与Android高度明显不一致，无法还原设计图和多端一UI致性，问题如下图
-![高度对比](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/001.2t7od3yd0ja0.webp "高度对比")
+![高度对比](https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/001.2t7od3yd0ja0.webp "高度对比")
 :::
 
 #### 问题分析
@@ -98,7 +98,7 @@ style="height: {{platform == 'android' ?'124rpx': '166rpx'}};
 
 ::: warning 问题描述
 Android 渲染正常，IOS渲染如下图有一边明显有渲染问题
-![渲染问题](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/002.2np9s9qulig0.webp "渲染问题")
+![渲染问题](https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/002.2np9s9qulig0.webp "渲染问题")
 :::
 
 #### 问题分析
