--- a/docs/010.大前端/030.CSS/03.Flex..md
+++ b/docs/010.大前端/030.CSS/03.Flex..md
@@ -59,7 +59,7 @@ flex主要有6个属性
 }
 ```
 
-![img](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/flex-direction.1d1dl5yavx28.webp)
+![img](https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/flex-direction.1d1dl5yavx28.webp)
 
 
 ::: demo `flex-direction` 属性展示 （实际上示例中的部分文本元素为项目的**起点元素**，但为了更好的展示，故忽略了示例中的文本元素）
