--- a/docs/020.算法/01.JavaScript数据结构与算法.md
+++ b/docs/020.算法/01.JavaScript数据结构与算法.md
@@ -9,4 +9,4 @@ tags:
 editLink: false
 ---
 
-![思维导图](https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/JS数据结构与算法.7ap38ptgbl40.webp)
+![思维导图](https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/JS数据结构与算法.7ap38ptgbl40.webp)
