--- a/docs/090.关于/01.关于我.md
+++ b/docs/090.关于/01.关于我.md
@@ -13,8 +13,8 @@ editLink: false # 编辑按钮
 ---
 ## :cat: 蛋蛋
 <div class="cat-container">
-  <img class="my-cat" src="https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/dandan02.2qappjk64i80.webp" alt="蛋蛋"></img>
-  <img class="my-cat" src="https://cdn.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/dandan01.kpvpyelwk6o.webp" alt="蛋蛋"></img>
+  <img class="my-cat" src="https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/dandan02.2qappjk64i80.webp" alt="蛋蛋"></img>
+  <img class="my-cat" src="https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/dandan01.kpvpyelwk6o.webp" alt="蛋蛋"></img>
 </div>
 
 
