--- a/docs/010.大前端/010.vue/01.vue总结.md
+++ b/docs/010.大前端/010.vue/01.vue总结.md
@@ -1,5 +1,5 @@
 ---
-title: vue2总结
+title: Vue2.x总结
 date: 2022-06-21 17:22:52
 permalink: /pages/7d516c/
 categories:
@@ -9,3 +9,44 @@ tags:
   - vue
 editLink: false
 ---
+
+
+## 模板语法
+
+### 模板语法 `Mustache`
+数据绑定最常见的形式就是使用`Mustache`语法 (双大括号) 的文本插值， 
+```vue
+<span>Message: {{ msg }}</span>
+```
+#### v-once
+使用`v-once`指令可以让模板语法只被编译一次，这样可以提高性能。
+```vue
+<span v-once>Message: {{ msg }}</span>
+```
+
+#### v-html
+使用`v-html`指令可以让模板语法渲染HTML内容。
+```vue
+<p>Using mustaches: {{ rawHtml }}</p>
+<p>Using v-html directive: <span v-html="rawHtml"></span></p>
+```
+
+::: warning 注意
+动态渲染的任意 HTML 很容易导致 XSS 攻击。请只对可信内容使用 HTML 插值，绝不要对用户提供的内容使用插值。
+:::
+
+#### v-text
+
+`v-text`作用和Mustache语法一样，可以把模板语法渲染为文本。一般情况下只接受`String`类型
+
+#### v-pre
+v-pre用于跳过这个元素和它子元素的编译过程，直接显示出原本的Mustache语法。
+
+#### v-cloak
+当客户端因为某些原因不能正确渲染模板时，可以使用`v-cloak`指令来避免客户端的错误渲染。等待模板渲染完成后，会自动添加`display:none`属性，隐藏模板。
+
+#### v-bind
+`v-bind`指令可以绑定一个或者多个属性值到一个对象的属性。另外也用于组件传递`props`值。该属性的语法糖是在属性值前加`:`。
+```vue
+
+```
