--- a/docs/00.目录页/03.后端.md
+++ b/docs/00.目录页/03.后端.md
@@ -2,21 +2,15 @@
 pageComponent:
   name: Catalogue
   data:
-    path: 010.大前端
-    key: 010.大前端
+    path: 03.后端
+    key: 03.后端
     imgUrl: /assets/img/web.png
     description: JavaScript、ES6、Vue框架等前端技术
 title: 大前端
 date: 2022-06-21 15:45:38
-permalink: /pages/42d833/
-categories:
-  - 大前端
-  - JavaScript
-tags:
-  - 大前端
+permalink: /backend/
 sidebar: false # 侧边栏
-article: false # 文章页 (不显示面包屑栏、最近更新栏等)
+article: false # 文章页 
 comment: false # 评论栏
 editLink: false # 编辑按钮
 ---
-
