--- a/docs/09.关于/01.关于我.md
+++ b/docs/09.关于/01.关于我.md
@@ -11,15 +11,15 @@ article: true # 文章页 (不显示面包屑栏、最近更新栏等)
 comment: true # 评论栏
 editLink: false # 编辑按钮
 ---
-## :cat: 蛋蛋
-<div class="cat-container">
+<!-- ## :cat: 蛋蛋 -->
+<!-- <div class="cat-container">
   <img class="my-cat" src="https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/dandan02.2qappjk64i80.webp" alt="蛋蛋"></img>
   <img class="my-cat" src="https://gcore.jsdelivr.net/gh/dafei5350/imgHost@master/20220625/dandan01.kpvpyelwk6o.webp" alt="蛋蛋"></img>
-</div>
+</div> -->
 
 
 ## 👩‍💻关于我
-前端小小萌新,没啥特别得兴趣爱好,喜欢瞎折腾,大学时误入歧途自学了前端开发，但依然对网络安全心心念的菜狗
+前端小小萌新,野生程序员,喜欢瞎折腾,大学时误入歧途自学了前端开发，但依然对网络安全心心念的菜狗
 ### 技能
 - 熟悉 JavaScript、HTML、CSS、Vue的拼写
 - 会一点小程序
